# classification_tabular_datasets

./: .gitignore  README.md  calcualate_stats.ipynb  clfdatasets.py  datasets_summary.csv  pyproject.toml
adult/: adult.names  adult.parquet
anneal/: anneal.parquet
audiology/: audiology.parquet
auto-mpg/: auto-mpg.parquet
autos/: autos.parquet
balance-scale/: balance-scale.parquet
breast-cancer/: breast-cancer.arff  breast-cancer.names  breast-cancer.parquet
bupa-liver-disorders/: bupa-liver-disorder.names  bupa-liver-disorders.csv  bupa-liver-disorders.parquet
car/: car.parquet
churn/: churn.names  churn.parquet
cleveland/: cleveland.parquet
connect-4/: connect-4.parquet
credit-a/: credit-a.parquet
credit-g/: credit-g.csv  credit-g.names  credit-g.parquet
cylinder-bands/: cylinder-bands.parquet
diabetes/: diabetes.names  diabetes.parquet
echocardiogram/: echocardiogram.csv  echocardiogram.parquet
ecoli/: ecoli.parquet
flag/: flag.parquet
glass/: glass.parquet
haberman/: haberman.csv  haberman.names  haberman.parquet  to_parquet.py
hayes-roth/: hayes-roth.parquet
heart-c/: heart-c.csv  heart-c.names  heart-c.parquet
heart-statlog/: heart-statlog.csv  heart-statlog.names  heart-statlog.parquet
hepatitis/: hepatitis.csv  hepatitis.names  hepatitis.parquet
horse-colic/: horse-colic.csv  horse-colic.names  horse-colic.parquet
hr-evaluation/: hr-evaluation.names  hr-evaluation.parquet
hungarian-heart-disease/: hungarian-heart-disease.csv  hungarian-heart-disease.parquet
iris/: iris.csv  iris.parquet
magic/: magic.names  (+1 more)
(+1087 files in other folders)
