[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Cezary Maszczyk", email = "cezary.maszczyk@gmail.com"},
]
dependencies = [
  "pandas",
  "fastparquet",
]
name = "clfdatasets"
readme = "README.md"
version = "1.0.0"

[tool.setuptools]
py-modules = ["clfdatasets"]
